# theris

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  deploy.yaml
docs/: book.toml
docs/src/: README.md  SUMMARY.md  config.md  examples.md  install.md
docs/src/config/: appliers.md  templates.md  themes.md
examples/: README.md  appliers.yaml  themes.yaml
examples/config/: eww.scss  hyprpaper.conf  kitty.conf  nvim.lua  zathura
src/: applier.rs  backup.rs  cli.rs  cmd.rs  config.rs  lib.rs  main.rs  template.rs  utils.rs
src/applier/: delimeter.rs  replace_text.rs  script.rs  template.rs
src/cmd/: apply.rs  list.rs  restore.rs
templates/: kitty.conf
