[package]
name = "theris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version= "4.5.8", features= ["cargo"] }
colored = "2.1.0"
env_logger = "0.11.3"
human-panic = "2.0.0"
is-terminal = "0.4.12"
log = "0.4.22"
regex = "1.10.5"
serde = "1.0.203"
serde_json = "1.0.120"
serde_yaml = "0.9.34"
tempfile = "3.10.1"
tera = "1.20.0"
