[package]
authors = ["Marcos Brito"]
name = "theris"
description = "A color scheme manager for *NIX ricers"
version = "0.1.0"
edition = "2021"
keywords = ["theme", "color", "cli", "color-scheme", "manager"]
homepage = "https://marcos-brito.github.io/theris/"
categories = ["command-line-utilities"]
repository = "https://github.com/marcos-brito/theris"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version= "4.5.8", features= ["cargo"] }
colored = "2.1.0"
dirs = "5.0.1"
env_logger = "0.11.3"
flate2 = "1.0.30"
hex = "0.4.3"
human-panic = "2.0.0"
is-terminal = "0.4.12"
log = "0.4.22"
regex = "1.10.5"
serde = "1.0.203"
serde_json = "1.0.120"
serde_yaml = "0.9.34"
tar = "0.4.41"
tempfile = "3.10.1"
tera = "1.20.0"
